2015-01-13  Dmitry Antipov  <dmantipov@yandex.ru>

	Support DEFUN attributes.
	* make-docfile.c (struct global): New field 'flags'.
	(DEFUN_noreturn, DEFUN_const): New enum bitfields.
	(add_global): Now return pointer to global.
	(write_globals): Add _Noreturn and ATTRIBUTE_CONST attributes
	if requested by global's flags.
	(stream_match): New function.
	(scan_c_stream): Recognize 'attributes:' of DEFUN.

2015-01-10  Paul Eggert  <eggert@cs.ucla.edu>

	Port to 32-bit --with-wide-int
	* make-docfile.c (write_globals): Define and use symbols like
	iQnil (a small integer, like 0) rather than aQnil (an address
	constant).

	Port to 32-bit Sun C 5.12 sparc
	* make-docfile.c (close_emacs_globals): Align lispsym to GCALIGNMENT.
	The alignment is required on all platforms; it just happens to have
	been properly aligned on the previous platforms we tested.

2015-01-05  Paul Eggert  <eggert@cs.ucla.edu>

	Use 0 for Qnil
	* make-docfile.c (compare_globals): Consider 'nil' to be the least.

	Compute C decls for DEFSYMs automatically
	Fixes Bug#15880.
	* make-docfile.c: Revamp to generate table of symbols, too.
	Include <stdbool.h>.
	(xstrdup): New function.
	(main): Don't process the same file twice.
	(SYMBOL): New constant in enum global_type.
	(struct symbol): Turn 'value' member into a union, either v.value
	for int or v.svalue for string.  All uses changed.
	(add_global): New arg svalue, which overrides value, so that globals
	can have a string value.
	(close_emacs_global): New arg num_symbols; all uses changed.
	Output lispsym decl.
	(write_globals): Output symbol globals too.  Output more
	ATTRIBUTE_CONST, now that Qnil etc. are C constants.
	Output defsym_name table.
	(scan_c_file): Move most of guts into ...
	(scan_c_stream): ... new function.  Scan for DEFSYMs and
	record symbols found.  Don't read past EOF if file doesn't
	end in newline.

2015-01-04  Paul Eggert  <eggert@cs.ucla.edu>

	'temacs -nw' should not call missing functions
	* make-docfile.c (write_globals):